--- a/notebooks/05_model_training.ipynb
+++ b/notebooks/05_model_training.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "be8d185b",
    "metadata": {},
    "outputs": [
@@ -180,29 +180,7 @@
      "text": [
       "\n",
       "Training SVM...\n",
-      "Fitting 5 folds for each of 90 candidates, totalling 450 fits\n",
-      "Best parameters for SVM: {'clf__C': 10, 'clf__degree': 2, 'clf__gamma': 'scale', 'clf__kernel': 'linear'}\n",
-      "Best CV Weighted F1 Score: 0.7490\n",
-      "\n",
-      "Training RandomForest...\n",
-      "Fitting 5 folds for each of 360 candidates, totalling 1800 fits\n",
-      "Best parameters for RandomForest: {'clf__bootstrap': False, 'clf__max_depth': 20, 'clf__min_samples_leaf': 1, 'clf__min_samples_split': 10, 'clf__n_estimators': 100}\n",
-      "Best CV Weighted F1 Score: 0.7554\n",
-      "\n",
-      "Training XGBoost...\n",
-      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
-      "Best parameters for XGBoost: {'clf__colsample_bytree': 1.0, 'clf__learning_rate': 0.1, 'clf__max_depth': 3, 'clf__n_estimators': 100, 'clf__subsample': 1.0}\n",
-      "Best CV Weighted F1 Score: 0.7575\n",
-      "\n",
-      "Training DecisionTree...\n",
-      "Fitting 5 folds for each of 135 candidates, totalling 675 fits\n",
-      "Best parameters for DecisionTree: {'clf__criterion': 'gini', 'clf__max_depth': 5, 'clf__min_samples_leaf': 4, 'clf__min_samples_split': 2}\n",
-      "Best CV Weighted F1 Score: 0.7260\n",
-      "\n",
-      "Training LightGBM...\n",
-      "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n",
-      "Best parameters for LightGBM: {'clf__colsample_bytree': 0.8, 'clf__learning_rate': 0.1, 'clf__max_depth': 3, 'clf__n_estimators': 50, 'clf__num_leaves': 15, 'clf__subsample': 0.8}\n",
-      "Best CV Weighted F1 Score: 0.7540\n"
+      "Fitting 5 folds for each of 90 candidates, totalling 450 fits\n"
      ]
     }
    ],
@@ -2161,6 +2139,27 @@
    "source": [
     "dump(best_pipeline, \"../outputs/models/best_pipeline.joblib\")\n",
     "print(\"Pipeline saved to ../outputs/models/best_pipeline.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2194ab87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save all trained models\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"SAVING ALL TRAINED MODELS\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "for model_name, model_pipeline in best_models.items():\n",
+    "    model_path = f\"../outputs/models/{model_name.lower()}_model.joblib\"\n",
+    "    dump(model_pipeline, model_path)\n",
+    "    print(f\"✅ Saved {model_name} to {model_path}\")\n",
+    "\n",
+    "print(\"\\nAll models saved successfully!\")\n",
+    "print(f\"Models saved: {list(best_models.keys())}\")"
    ]
   },
   {
