--- a/notebooks/05_model_training.ipynb
+++ b/notebooks/05_model_training.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "be8d185b",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,29 @@
      "text": [
       "\n",
       "Training SVM...\n",
-      "Fitting 5 folds for each of 90 candidates, totalling 450 fits\n"
+      "Fitting 5 folds for each of 90 candidates, totalling 450 fits\n",
+      "Best parameters for SVM: {'clf__C': 10, 'clf__degree': 2, 'clf__gamma': 'scale', 'clf__kernel': 'linear'}\n",
+      "Best CV Weighted F1 Score: 0.7490\n",
+      "\n",
+      "Training RandomForest...\n",
+      "Fitting 5 folds for each of 360 candidates, totalling 1800 fits\n",
+      "Best parameters for RandomForest: {'clf__bootstrap': False, 'clf__max_depth': 20, 'clf__min_samples_leaf': 1, 'clf__min_samples_split': 10, 'clf__n_estimators': 100}\n",
+      "Best CV Weighted F1 Score: 0.7554\n",
+      "\n",
+      "Training XGBoost...\n",
+      "Fitting 5 folds for each of 243 candidates, totalling 1215 fits\n",
+      "Best parameters for XGBoost: {'clf__colsample_bytree': 1.0, 'clf__learning_rate': 0.1, 'clf__max_depth': 3, 'clf__n_estimators': 100, 'clf__subsample': 1.0}\n",
+      "Best CV Weighted F1 Score: 0.7575\n",
+      "\n",
+      "Training DecisionTree...\n",
+      "Fitting 5 folds for each of 135 candidates, totalling 675 fits\n",
+      "Best parameters for DecisionTree: {'clf__criterion': 'gini', 'clf__max_depth': 5, 'clf__min_samples_leaf': 4, 'clf__min_samples_split': 2}\n",
+      "Best CV Weighted F1 Score: 0.7260\n",
+      "\n",
+      "Training LightGBM...\n",
+      "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n",
+      "Best parameters for LightGBM: {'clf__colsample_bytree': 0.8, 'clf__learning_rate': 0.1, 'clf__max_depth': 3, 'clf__n_estimators': 50, 'clf__num_leaves': 15, 'clf__subsample': 0.8}\n",
+      "Best CV Weighted F1 Score: 0.7540\n"
      ]
     }
    ],
@@ -1169,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "629e6a1f",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1201,7 @@
        "['../outputs/models/best_model.joblib']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "db813944",
    "metadata": {},
    "outputs": [],
@@ -1201,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "f31f3687",
    "metadata": {},
    "outputs": [
@@ -2113,7 +2135,7 @@
        "                                random_state=42, subsample=0.8, verbose=-1))])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2124,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "26eae292",
    "metadata": {},
    "outputs": [
@@ -2143,10 +2165,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "2194ab87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "SAVING ALL TRAINED MODELS\n",
+      "============================================================\n",
+      "✅ Saved SVM to ../outputs/models/svm_model.joblib\n",
+      "✅ Saved RandomForest to ../outputs/models/randomforest_model.joblib\n",
+      "✅ Saved XGBoost to ../outputs/models/xgboost_model.joblib\n",
+      "✅ Saved DecisionTree to ../outputs/models/decisiontree_model.joblib\n",
+      "✅ Saved LightGBM to ../outputs/models/lightgbm_model.joblib\n",
+      "\n",
+      "All models saved successfully!\n",
+      "Models saved: ['SVM', 'RandomForest', 'XGBoost', 'DecisionTree', 'LightGBM']\n"
+     ]
+    }
+   ],
    "source": [
     "# Save all trained models\n",
     "print(\"\\n\" + \"=\"*60)\n",
